build: add maui client app

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 src/dotnet/Host/appsettings.local.json
 tests/Testing/testsettings.local.json
 src/dotnet/UI.Blazor.Host/wwwroot/dist/
+src/dotnet/ClientApp/wwwroot/dist/
 build/Build.sln
 Nerdbank.GitVersioning.*
 # IDE folders & files
