--- a/src/dotnet/Host/appsettings.Development.json
+++ b/src/dotnet/Host/appsettings.Development.json
@@ -30,11 +30,8 @@
   },
   "UsersSettings": {
     "Db": "",
-    "Redis": ""
-
-
-
-
+    "Redis": "",
+    "NewUserDefaultStatus": "Active"
   },
   "Logging": {
     "Console": {
